fixed white space
fixed white space

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 .color-overlay {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,.7);
@@ -38,7 +38,7 @@ nav {
 }
 
 p {
-    font-size: 2rem;
+    font-size: 1rem;
     white-space: normal;
     word-wrap: normal;
 }
